add task in project

--- a/TaskManagementSystem.csproj
+++ b/TaskManagementSystem.csproj
@@ -28,6 +28,7 @@
     <None Remove="Views\Shared\Components\" />
     <None Remove="Views\Shared\Components\Projects\" />
     <None Remove="ViewComponents\" />
+    <None Remove="Views\Tasks\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
@@ -38,5 +39,6 @@
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="Views\Shared\Components\Projects\" />
     <Folder Include="ViewComponents\" />
+    <Folder Include="Views\Tasks\" />
   </ItemGroup>
 </Project>
