--- a/TaskManagementSystem.csproj
+++ b/TaskManagementSystem.csproj
@@ -35,6 +35,7 @@
     <None Remove="Views\Shared\Components\Projects\" />
     <None Remove="ViewComponents\" />
     <None Remove="Migrations\" />
+    <None Remove="Interfaces\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
@@ -45,5 +46,6 @@
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="Views\Shared\Components\Projects\" />
     <Folder Include="ViewComponents\" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 </Project>
