--- a/TaskManagementSystem.csproj
+++ b/TaskManagementSystem.csproj
@@ -24,6 +24,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Client" Version="8.0.6" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Areas\" />
@@ -36,6 +38,7 @@
     <None Remove="ViewComponents\" />
     <None Remove="Migrations\" />
     <None Remove="Interfaces\" />
+    <None Remove="Hubs\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
@@ -47,5 +50,6 @@
     <Folder Include="Views\Shared\Components\Projects\" />
     <Folder Include="ViewComponents\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Hubs\" />
   </ItemGroup>
 </Project>
