--- a/TaskManagementSystem.csproj
+++ b/TaskManagementSystem.csproj
@@ -39,6 +39,9 @@
     <None Remove="Migrations\" />
     <None Remove="Interfaces\" />
     <None Remove="Hubs\" />
+    <None Remove="Services\Proxies\" />
+    <None Remove="Services\Observer\" />
+    <None Remove="Services\ProjectFactory\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\" />
@@ -50,5 +53,8 @@
     <Folder Include="Views\Shared\Components\Projects\" />
     <Folder Include="ViewComponents\" />
     <Folder Include="Hubs\" />
+    <Folder Include="Services\Proxies\" />
+    <Folder Include="Services\Observer\" />
+    <Folder Include="Services\ProjectFactory\" />
   </ItemGroup>
 </Project>
